Add haskell code

--- a/haskell/leetcode-haskell.cabal
+++ b/haskell/leetcode-haskell.cabal
@@ -18,6 +18,9 @@ extra-source-files:  README.md
 executable leetcode-haskell
   hs-source-dirs:      src
   main-is:             Main.hs
+  other-modules:       Lib.Types
+                    , Lib.TreeHelper
+                    , Solutions.P104
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
   ghc-options:         -Wall
